[JVMCI] Backout 8246347 changes

XMLWordPrintable

    • b11
    • generic
    • generic
    • Not verified

      JDK-8246347 cause a lot of Graal and AOT tests failed. Particular in Tier1.

      Exception in thread "main" jdk.vm.ci.common.JVMCIError: VM config values not expected to be present in JDK 16 linux-amd64 (java.home=/opt/mach5/mesos/work_dir/jib-master/install/jdk-16+11-400/linux-x64-debug.jdk/jdk-16/fastdebug, java.vm.name=Java HotSpot(TM) 64-Bit Server VM, java.vm.version=16-ea+11-400):
          CodeInstaller::DEOPT_MH_HANDLER_ENTRY at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfig.<init>(GraalHotSpotVMConfig.java:901) [value: 25]
          vmIntrinsics::FIRST_MH_SIG_POLY at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfig.<init>(GraalHotSpotVMConfig.java:915) [value: 305]
          vmIntrinsics::LAST_MH_SIG_POLY at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfig.<init>(GraalHotSpotVMConfig.java:916) [value: 310]
          vmIntrinsics::_compiledLambdaForm at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfig.<init>(GraalHotSpotVMConfig.java:918) [value: 311]
          vmIntrinsics::_invokeGeneric at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfig.<init>(GraalHotSpotVMConfig.java:917) [value: 305]
      at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfigAccess.reportErrors(GraalHotSpotVMConfigAccess.java:227)
      at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.GraalHotSpotVMConfig.<init>(GraalHotSpotVMConfig.java:66)
      at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.AOTGraalHotSpotVMConfig.<init>(AOTGraalHotSpotVMConfig.java:36)
      at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.HotSpotGraalRuntime.<init>(HotSpotGraalRuntime.java:164)
      at jdk.internal.vm.compiler@16-ea/org.graalvm.compiler.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:156)
      at jdk.aot@16-ea/jdk.tools.jaotc.Main.run(Main.java:178)
      at jdk.aot@16-ea/jdk.tools.jaotc.Main.run(Main.java:135)
      at jdk.aot@16-ea/jdk.tools.jaotc.Main.main(Main.java:91)

            Assignee:
            Vladimir Kozlov
            Reporter:
            Vladimir Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: