8251369: [JVMCI] Backout 8246347 changes

Reviewed-by: dholmes