src/hotspot/share/jvmci/vmStructs_jvmci.cpp
@@ -471,13 +471,7 @@
   declare_constant(CodeInstaller::CRC_TABLE_ADDRESS)                      \
   declare_constant(CodeInstaller::LOG_OF_HEAP_REGION_GRAIN_BYTES)         \
   declare_constant(CodeInstaller::INLINE_CONTIGUOUS_ALLOCATION_SUPPORTED) \
-  declare_constant(CodeInstaller::DEOPT_MH_HANDLER_ENTRY)                 \
   declare_constant(CodeInstaller::INVOKE_INVALID)                         \
-                                                                          \
-  declare_constant(vmIntrinsics::FIRST_MH_SIG_POLY)                       \
-  declare_constant(vmIntrinsics::LAST_MH_SIG_POLY)                        \
-  declare_constant(vmIntrinsics::_invokeGeneric)                          \
-  declare_constant(vmIntrinsics::_compiledLambdaForm)                     \
                                                                           \
   declare_constant(CollectedHeap::Serial)                                 \
   declare_constant(CollectedHeap::Parallel)                               \
@@ -972,3 +966,4 @@ void jvmci_vmStructs_init() {
   JVMCIVMStructs::init();
 }
 #endif // ASSERT
+
